@@ -24,7 +24,8 @@ MAKEDEPEND_VER=1.0.5
 
 CMAKE_VER=2.8.1
 CMAKE_SUBVER=2.8
-PKGCONFIG_VER=0.22
+#PKGCONFIG_VER=0.22
+PKGCONFIG_VER=0.26
 
 
 ### System kernel ###
