@@ -219,6 +219,8 @@ ec3f5c9714ba0fd45cb4e087301eb1336c317e0d20b575a125050470e8089e4d  openssl-1.0.2o
 57045120a26a0dbaf58e787df872fc5bf6573e91d7872648afddc6fdd856e131  pciutils-3.1.7.tar.xz
 1803b5baed182cd3e061c541365488c91575184d7a8358243db93e0fc4c85a47  pciutils-3.1.9.tar.xz
 8d62f84fe7a7401af2ed62d6303255a0cf7333f606c136927f0ba9110ab6824a  pciutils-3.2.1.tar.xz
+7e0761b47d604847006e7c6caa9b9cf044530a516ff84395450edcfa3c2febe6  pkg-config-0.22.tar.gz
+94c1936a797c930fb3e4e5a154165b6268caba22b32d24083dd4c492a533c8af  pkg-config-0.26.tar.gz
 6984542fea333488de5c82eea58d699e4aff4b359200a9971537cd7e047185f7  proj-4.9.3.tar.gz
 b30df08d736e69744cb255828721abb545b494d6032c13a96520f3219a444cd2  proj-5.0.0.tar.gz
 6b1379a53317d9b5b8c723c1dc7bf2e3a8eb22ceb46b8807a1ce48ef65685bb3  proj-5.1.0.tar.gz
