@@ -4,11 +4,6 @@
 
 (
     PKG=pkg-config-settings
-#    PKG_VERSION=${PKGCONFIG_VER}
-#    PKG_SUBDIR=${PKG}-${PKG_VERSION}
-#    PKG_SUBDIR_ORIG=pkg-config-${PKG_VERSION}
-#    PKG_FILE=pkg-config-${PKG_VERSION}.tar.gz
-#    PKG_URL="https://pkgconfig.freedesktop.org/releases/${PKG_FILE}"
     PKG_DEPS=
 
     if IsBuildRequired
